# fitd-server

./: Cargo.toml  README.md
src/: character.rs  main.rs  repository.rs  traits.rs
src/character/: character_placeholder.rs  player_character.rs  vice.rs
src/command/: create_account.rs
src/model/: account.rs
src/repository/: entity.rs  memory_repository.rs  memory_repository_tests.rs  mod.rs
src/traits/: create_account.rs  has_id.rs
